--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.26",
