--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^2.2.8",
+    "axios": "^0.27.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "md-editor-v3": "^1.11.12",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
