chore: repackage axios

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "md-editor-v3": "^1.11.12",
+    "store": "^2.0.12",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
